# multi-agent-pydanticAI

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/: agents.py  app.py  database.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ThemeRegistry.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  CodeBlock.tsx  ImageAnalysis.tsx  ModeToggle.tsx  SearchResults.tsx
frontend/src/components/layouts/: ChatLayout.tsx  WelcomePage.tsx
frontend/src/components/sidebars/: LeftSidebar.tsx  RightSidebar.tsx
frontend/src/config/: api.ts
frontend/src/services/: apiService.ts
frontend/src/types/: apiServiceTypes.ts  chatTypes.ts  index.ts
frontend/src/utils/: omitRef.ts
